ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Agreed_to_Receive_Emails__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Receive_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed to Receive Emails</label>
    <type>Checkbox</type>
</CustomField>