ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest__c</fullName>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalysis</fullName>
            </value>
            <value>
                <fullName>Inorganic</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Material Science</fullName>
                <label>Materials Science</label>
            </value>
            <value>
                <fullName>Nanomaterials</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Petrochemicals</fullName>
            </value>
            <value>
                <fullName>Thin Film Deposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>