ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Case_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Case_to_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case-to-Lead</label>
    <type>Checkbox</type>
</CustomField>