ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Case_to_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_to_Lead_Source__c</fullName>
    <label>Case-to-Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>