ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Company_University__c.field-meta.xml
<CustomField>
    <fullName>Company_University__c</fullName>
    <label>Company/University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>