ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Product_CAS_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_CAS_Number__c</fullName>
    <formula>Simple_Product__r.CAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product CAS Number</label>
    <type>Text</type>
</CustomField>