ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>Simple_Product__r.Parent_Sku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>