ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Regarding__c.field-meta.xml
<CustomField>
    <fullName>Regarding__c</fullName>
    <label>Regarding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Status/Questions</fullName>
            </value>
            <value>
                <fullName>Account Setup/Registration</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>New Product Suggestion</fullName>
            </value>
            <value>
                <fullName>Other Inquiries</fullName>
                <default>true</default>
                <label>Other Inquiries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>