ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>Short Description</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>