ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/fields/Simple_Product__c.field-meta.xml
<CustomField>
    <fullName>Simple_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Simple Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>