ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Case/listViews/Strem_Customer_Service_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Strem_Customer_Service_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Company_University__c</columns>
    <columns>Short_Description__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Strem Customer Service Queue</label>
    <queue>Strem_Customer_Service_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>